# VulkanVoxel

./: .gitignore  BlockRegistry.h  CMakeLists.txt  CMakePresets.json  MathTypes.h  PeriodicSimplex.cpp  PeriodicSimplex.h  README.md  TerrainConfig.cpp  TerrainConfig.h  VoxelWorld.cpp  VoxelWorld.h  VulkanVoxel.cpp  VulkanVoxel.h  VulkanVoxelDraw.cpp  VulkanVoxelResources.cpp  VulkanVoxelSetup.cpp  WorldGenerator.cpp  WorldGenerator.h  WorldSettings.cpp  WorldSettings.h
ComplementaryUnbound/shaders/lib/: common.glsl
assets/config/: terrain.json  world.json
assets/textures/: desktop.ini
assets/textures/character/: Character.glb  Character.mesh
assets/tools/: extract_character_glb.py
assets/worldgen/: landform_curve.pyw  landform_curve_points.json
config/: blocks.json  world.json
docs/: README.md
docs/0.0.0.0/: log.md  plan.md  summary.md
references/noise/FastNoise2/src/: CMakeLists.txt
shaders/: block.frag  block.vert  debug_text.frag  debug_text.vert  overlay.frag  overlay.vert  player.frag  player.vert  selection.frag  selection.vert  sky.frag  sky.vert  terrain.frag  terrain.vert  world.frag  world.vert
src/: main.cpp
src/assets/: ImageLoader.cpp  ImageLoader.h
src/core/: FileSystem.cpp  FileSystem.h  GameConfig.cpp  GameConfig.h  Logger.cpp  Logger.h  Math.cpp  Math.h  SystemInfo.cpp  SystemInfo.h
src/player/: PlayerController.cpp  PlayerController.h  PlayerTypes.h
src/render/: CrosshairRenderer.cpp  CrosshairRenderer.h  DebugTextRenderer.cpp  DebugTextRenderer.h  PlayerModel.cpp  PlayerModel.h  TextureManager.cpp  TextureManager.h  VulkanDescriptors.cpp  VulkanDescriptors.h  VulkanHelpers.cpp  VulkanHelpers.h  VulkanPipelineBuilder.cpp  VulkanPipelineBuilder.h  VulkanResourceContext.cpp  VulkanResourceContext.h  VulkanSwapchain.cpp  VulkanSwapchain.h
src/world/: Block.h  BlockRaycast.cpp  BlockRaycast.h  BlockRegistry.cpp  BlockRegistry.h  ChunkMesher.cpp  ChunkMesher.h  ChunkStreamingManager.cpp  ChunkStreamingManager.h  ChunkTypes.h  SimplexNoise.cpp  SimplexNoise.h  WorldGenerator.cpp  WorldGenerator.h  WorldSave.cpp  WorldSave.h  WorldTime.h
